force-app/main/default/objects/Condition_Line_Item__c/Condition_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Condition Line Item</label>
    <nameField>
        <label>Condition Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condition Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>