force-app/main/default/objects/Condition_Line_Item__c/fields/Condition_Set__c.field-meta.xml
<CustomField>
    <fullName>Condition_Set__c</fullName>
    <label>Condition Set</label>
    <referenceTo>Condition_Set__c</referenceTo>
    <relationshipLabel>Condition Set Line Items</relationshipLabel>
    <relationshipName>Condition_Set_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>