force-app/main/default/objects/Condition_Line_Item__c/fields/Operand__c.field-meta.xml
<CustomField>
    <fullName>Operand__c</fullName>
    <label>Operand</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>