force-app/main/default/objects/Condition_Line_Item__c/fields/Rule_Number__c.field-meta.xml
<CustomField>
    <fullName>Rule_Number__c</fullName>
    <label>Rule Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>